tests/snapshots/diagnostic_tests__ui@unknown_property.au.snap
---
source: tests/diagnostic_tests.rs
expression: "fn main() {\n    \"foo\".bar\n}"
input_file: tests/inputs/diagnostics/unknown_property.au
---
Error: Undefined property
   ╭─[ main:2:11 ]
   │
 2 │     "foo".bar
   │     ──┬── ─┬─  
   │       ╰──────── Value has type `String`
   │            │   
   │            ╰─── Unknown property `bar`
───╯
